adding room database dependency to store characters locally

--- a/app/src/main/res/layout/single_row_character.xml
+++ b/app/src/main/res/layout/single_row_character.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="character"
-            type="com.example.marvelapplication.data.characters.Character" />
+            type="com.example.marvelapplication.data.characters.models.Character" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
