--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_main.xml"
     app:startDestination="@id/character_list_fragment">
 
     <fragment
         android:id="@+id/character_list_fragment"
         android:name="com.example.marvelapplication.ui.characters.CharactersListFragment"
-        android:label="Characters"/>
+        android:label="Characters"
+        tools:layout="@layout/fragment_characters_list">
+        <action
+            android:id="@+id/from_characters_to_details"
+            app:destination="@id/character_details_fragment"
+            app:popUpTo="@id/character_list_fragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/character_details_fragment"
+        android:name="com.example.marvelapplication.ui.characterdetails.CharacterDetailsFragment"
+        android:label="Characters"
+        tools:layout="@layout/fragment_character_detail">
+        <argument
+            android:name="characterId"
+            app:argType="integer"
+            app:nullable="false" />
+
+    </fragment>
 </navigation>
