Adding dependencies for Unit testing under Unit tests comment in app build.gradle Creating CharacterDetailsUseCaseImplTest.kt as unit test cases CharacterDetailsUseCaseImpl.kt to test get comics

--- a/app/src/main/res/layout/fragment_characters_list.xml
+++ b/app/src/main/res/layout/fragment_characters_list.xml
@@ -7,6 +7,19 @@
     android:background="@color/grey"
     tools:context=".ui.characters.CharactersListFragment">
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvSwipeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/swipe_down_to_refresh"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refresh"
         android:layout_width="match_parent"
@@ -22,7 +35,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
